--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A wedding website with loads of features.",
   "main": "npmfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "gulp serve"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "license": "GPL-3.0",
   "homepage": "https://github.com/EmmaPj18/wedding-website",
   "devDependencies": {
+    "browser-sync": "^3.0.2",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^5.0.0",
